Fixed dark mode flicker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0 auto;
+}
+
 * {
   transition: color 0.1s ease, background-color 0.5s ease, border-color 0.5s ease, fill 2s ease;
 }
